# GW2Load

./: .gitignore  CMakeLists.txt  CMakePresets.json  Common.h  D3DHook.cpp  D3DHook.h  D3DHook.ixx  D3DHook_general.cpp  D3DHook_general.ixx  D3DHook_vtables.cpp  D3DHook_vtables.ixx  GW2Load.sln  GW2Load.vcxproj  GW2Load.vcxproj.filters  GW2VerLoad.sln  GW2VerLoad.vcxproj  GW2VerLoad.vcxproj.filters  Loader.cpp  Loader.h  Loader.ixx  Main.def  README.md  StandaloneTestApp.cpp  StandaloneTestApp.vcxproj  StandaloneTestApp.vcxproj.filters  Utils.cpp  Utils.h  Utils.ixx  VTables.cpp  VTables.ixx  Version.def  Version.rc  api.h  dllmain.cpp  exports.cpp  framework.h  get_version.ps1  jmp.asm  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml  msbuild.yml
cmake/: generate-version.cmake  git-version.cmake  vs-version.cmake
